Fixed the Card CSS

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -84,7 +84,7 @@ body {
 }
 
 .input-area button:hover {
-  background-color: #002244; /* Darker blue on hover */
+  background-color: #8ec1f5; /* Darker blue on hover */
 }
 
 /* Responsive design */
