--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -159,7 +159,7 @@
 }
 
 .main .card:hover {
-    background-color: #003366; /* Dark blue hover */
+    background-color: #48a3ff; /* Dark blue hover */
     color: #ffffff; /* White text */
 }
 
